--- a/Presentation/Views/Home/Main.cshtml
+++ b/Presentation/Views/Home/Main.cshtml
@@ -3,5 +3,7 @@
     ViewData["Title"] = "Main";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+<div style="margin-top:300px"></div>
 
 
+<input type="button" class="btn btn-primary" value="Ask Question" onclick="location.href='@Url.Action("AskQuestion", "Main")'" />
