--- a/Presentation/Views/Main/AskQuestion.cshtml
+++ b/Presentation/Views/Main/AskQuestion.cshtml
@@ -3,8 +3,28 @@
     ViewData["Title"] = "AskQuestion";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+<div style="margin-top:80px;">
+    <form method="post" action="/Main/AskedQuestion">
+        <div class="form-group mb-3">
+            <label>Title</label>
+            <input type="text" class="form-control" placeholder="Title" name="Title" />
+        </div>
+        <div class="form-group mb-3">
+            <label>Body</label>
+            <input type="text" class="form-control" placeholder="Body" name="Body" />
+        </div>
+        <div class="form-group mb-3">
+            <label>Topic</label>
+            <input type="text" class="form-control" placeholder="Topic" name="Topic" />
+        </div>
+        <div class="form-group mb-3">
+            <label>User Id</label>
+            <input type="number" class="form-control" placeholder="UserId" name="UserId" />
+        </div>
+        <input type="submit" value="Ask Question" class="btn btn-info" />
 
-<h1>AskQuestion</h1>
-<h1>AskQuestion</h1>
-<h1>AskQuestion</h1>
+    </form> 
+
+
+</div>
 
